# gfx_pipeline

./: Cargo.toml  README.md
gpu/: flat.glslf  flat.glslv  flat_tex.glslf  flat_tex.glslv  phong.glslf  phong.glslv  phong_tex.glslf  phong_tex.glslv
src/: lib.rs  light.rs  view.rs
src/flat/: mod.rs
src/forward/: mod.rs  pipe.rs
