[package]
name = "gfx_pipeline"
version = "0.0.1"
license = "Apache-2.0"
keywords = ["graphics", "gamedev"]
authors = [
"Dzmitry Malyshau <kvarkus@gmail.com>",
]

[lib]
name = "gfx_pipeline"

[dependencies.gfx_phase]
git = "https://github.com/kvark/gfx_scene"

#[dependencies.gfx_scene]
#git = "https://github.com/kvark/gfx_scene"

[dependencies.gfx]
git = "https://github.com/gfx-rs/gfx-rs"

[dependencies.gfx_macros]
git = "https://github.com/gfx-rs/gfx_macros"
plugin = true

[dependencies.cgmath]
git = "https://github.com/bjz/cgmath-rs"

[dev_dependencies]
draw_state = "*"
