[package]
name = "gfx_pipeline"
version = "0.1.1"
description = "Standard materials and rendering pipelines for gfx_scene"
license = "Apache-2.0"
keywords = ["graphics", "gamedev"]
authors = [
"Dzmitry Malyshau <kvarkus@gmail.com>",
]

[lib]
name = "gfx_pipeline"

[dependencies.gfx_phase]
git = "https://github.com/gfx-rs/gfx_scene"
version = "*"

[dependencies.gfx_scene]
git = "https://github.com/gfx-rs/gfx_scene"
version = "*"

[dependencies.gfx]
git = "https://github.com/gfx-rs/gfx-rs"
version = "*"

[dependencies.cgmath]
git = "https://github.com/bjz/cgmath-rs"
version = "*"
